(lang dune 3.15)

(name noodle)

(generate_opam_files true)

(source
 (github emilpriver/noodle))

(authors "Emil Privér")

(maintainers "Emil Privér")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name noodle)
 (synopsis "A http library for shippers")
 (description "A http library for shippers")
 (depends ocaml dune)
 (tags
  (topics "http library")))

